# worm-sae

./: eval.py  main.py  models.py  pyproject.toml
models/: decode.pt  encode.pt
