[project]
name = "worm-sae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.34.3",
    "jax>=0.7.0",
    "jaxtyping>=0.3.2",
    "pandas>=2.3.1",
    "torch>=2.8.0",
]
